# fay-server

./: .gitignore  Setup.hs  fay-server.cabal
demos/: demo.hs
include/Language/Fay/: DOM.hs
modules/project/: AJAX.hs  Alert.hs  Calc.hs  Canvas.hs  Console.hs  Cookies.hs  DOM.hs  Data.hs  JQuery.hs  JSON.hs  Properties.hs  Ref.hs  Serialize.hs  Tailrecursive.hs  Three.hs  Timers.hs
modules/project/Demo/: AJAX.hs  Alert.hs  Calc.hs  Canvas.hs  Console.hs  Cookies.hs  DOM.hs  Data.hs  JQuery.hs  Properties.hs  Ref.hs  Serialize.hs  Tailrecursive.hs  Three.hs  Timers.hs
scripts/: client-dev-build  closure  server-restart  update-fay
src/: Client.hs  Main.hs  Server.hs  SharedTypes.hs
src/Client/: API.hs
src/Language/Fay/: CodeMirror.hs  DOM.hs  Date.hs  FFI.hs  JQuery.hs  Prelude.hs  Print.hs  ReactiveMvc.hs  Ref.hs
src/Language/Fay/JQuery/: Lib.hs
src/Server/: API.hs
src/System/Process/: Extra.hs
static/: index.html
static/css/: codemirror.css  fay.css  gen.css
static/js/: codemirror.lib.js  gen.js  jquery.lib.js
