name:                fay-server
version:             0.1.0.0
synopsis:            A web service for compiling Fay code.
description:         A web service for compiling Fay code.
homepage:            http://fay-lang.org/
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2012 Chris Done
category:            Web
build-type:          Custom
cabal-version:       >=1.8

library
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   Client
  build-depends:     base > 4 && < 5,
                     fay == 0.18.*,
                     snap-server,
                     snap-core,
                     utf8-string,
                     bytestring,
                     aeson,
                     mtl,
                     process,
                     safe,
                     split,
                     uuid,
                     filepath,
                     directory,
                     data-default,
                     haskell-src-exts,
                     strict,
                     ghc-paths

executable fay-server
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base,
                     fay == 0.18.*,
                     snap-server,
                     snap-core,
                     utf8-string,
                     bytestring,
                     aeson,
                     mtl,
                     process,
                     safe,
                     split,
                     uuid,
                     filepath,
                     directory,
                     data-default,
                     haskell-src-exts,
                     strict,
                     ghc-paths
